--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,12 +1,22 @@
 body {
     background-color: #000A21;
+    
 
-    //-------- MENU BURGER --------//
+    //-------- HEADER --------//
+.header {
+    height: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    
+
+    //-------- HEADER M --------//
     nav {
         position: fixed;
         top: 0px;
         left: 0px;
-        background-color:#F11D58;
+        background-color: #F11D58;
         height: 50px;
         width: 50px;
         overflow: hidden;
@@ -18,6 +28,7 @@ body {
         width: 100vw;
         left:0;
         top:0;
+        background-color:#F11D58;
     }
 
     .open {
@@ -33,18 +44,21 @@ body {
 
     .open-icon {
         transition: background-color 0.3s;
+    
     }
 
     .open-icon, .open-icon::before, .open-icon::after{
         width: 36px;
         height: 4px;
-        background:white;
+        border-radius: 2px;
+        background-color: #000A21;
     }
 
     .open-icon::before, .open-icon::after{
         content:'';
         display: block;
         transition: transform 0.3s;
+        
     }
 
     .open-icon::before {
@@ -61,10 +75,12 @@ body {
 
     nav.is-open .open-icon::before {
         transform: translateY(2px) rotate(45deg);
+        background-color: #000A21;
     }
 
     nav.is-open .open-icon::after {
         transform: translateY(-2px) rotate(-45deg);
+        background-color: #000A21;
     }
 
     ul {
@@ -77,7 +93,7 @@ body {
         justify-content: center;
         height: 100vh;
         width: 100vw;
-        transform: translate(calc(-55vw + 10px), calc(-45vh + 10px))scale(0);
+        transform: translate(calc(-55vw + 10px), calc(-55vh + 10px))scale(0);
         transition: transform 0.5s;
     }
 
@@ -87,13 +103,14 @@ body {
 
     nav:not(.is-open) ul {
         pointer-events: none;
+        background-color: #F11D58;
     }
 
     li {
-        font-size: 40px;
+        font-size: 30px;
         text-transform: uppercase;
         font-family: Arial, Helvetica, sans-serif;
-        color: white;
+        color: #000A21;
         list-style: none;
     }
 
@@ -125,10 +142,101 @@ body {
 
     li {
         margin-bottom: 0;
+        color: white;
     }
     li:not(:last-child) {
         margin-bottom: 0;
     }
+}
+
+.logo {
+    img {
+        height: 50px;
+    }
+}
+.networks {
+    margin-left: 100px;
+    margin-right: 10px;
+    height: 30px;
+}
+}
+
+
+.presentationCarousel {
+    font-size: 28px;
+    margin-left: 15px;
+    color: white;
+    font-family: poppins-semibold;
+    margin-top: 30px;
+    line-height: 120%;
+    div {
+        overflow: hidden;
+        position: fixed;
+        float: right;
+        height: 65px;
+        padding-top: 10px;
+        margin-top: -41px;
+        li {
+            font-family: poppins-semibold;
+            color: #F11D58;
+            padding: 0 120px;
+            height: 45px;
+            margin-bottom: 45px;
+            display: block;
+        }
+    }
+}
+
+.flip2 { animation: flip2 6s cubic-bezier(0.23, 1, 0.32, 1.2) infinite; }
+.flip3 { animation: flip3 8s cubic-bezier(0.23, 1, 0.32, 1.2) infinite; }
+.flip4 { animation: flip4 10s cubic-bezier(0.23, 1, 0.32, 1.2) infinite; }
+
+@keyframes flip2 {
+    0% { margin-top: -180px; }
+    5% { margin-top: -90px;  }
+    50% { margin-top: -90px; }
+    55% { margin-top: 0px; }
+    99.99% { margin-top: 0px; }
+    100% { margin-top: -270px; }
+}
+
+@keyframes flip3 {
+    0% { margin-top: -270px; }
+    5% { margin-top: -180px; }
+    33% { margin-top: -180px; }
+    38% { margin-top: -90px; }
+    66% { margin-top: -90px; }
+    71% { margin-top: 0px; }
+    99.99% { margin-top: 0px; }
+    100% { margin-top: -270px; }
+}
+
+@keyframes flip4 {
+    0% { margin-top: -360px; }
+    5% { margin-top: -270px; }
+    25% { margin-top: -270px; }
+    30% { margin-top: -180px; }
+    50% { margin-top: -180px; }
+    55% { margin-top: -90px; }
+    75% { margin-top: -90px; }
+    80% { margin-top: 0px; }
+    99.99% { margin-top: 0px; }
+    100% { margin-top: -270px; }
+}
+
+.paragraphePresentation {
+    font-family: poppins-light;
+    color: white;
+    margin-left:20px;
+    margin-top:25px;
+    width: 85%;
+    font-size: 16px;
+    line-height: 145%;
+
+    span {
+        color: #F11D58;
+    }
+    
 }
 
 }
