--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,7 +2,7 @@ body {
     background-color: #000A21;
     
 
-    //-------- HEADER --------//
+    //-------- HeadeR --------//
 .header {
     position: fixed;
     height: 50px;
@@ -14,7 +14,7 @@ body {
     background-color: #000A21;
     
 
-    //-------- HEADER M --------//
+    //-------- HeadeR MenU --------//
     nav {
         z-index: 10;
         position: fixed;
@@ -165,6 +165,7 @@ body {
 }
 }
 
+//-------- CarrouseL DE PrésentatioN --------//
 
 .presentationCarousel {
     font-size: 28px;
@@ -175,15 +176,15 @@ body {
     line-height: 120%;
     div {
         overflow: hidden;
-        //position: fixed;
-        float: right;
+        //float: initial;
         height: 65px;
         padding-top: 10px;
         margin-top: -41px;
         li {
             font-family: poppins-semibold;
+            
             color: #F11D58;
-            padding: 0 120px;
+            padding: 0 100px;
             height: 45px;
             margin-bottom: 45px;
             display: block;
@@ -260,14 +261,14 @@ body {
 
     }
 }
-.slideshow{
 
-//border: 5px solid white;
-//box-shadow: 0 0 5px hsla(0,0%,0%,.5);
+//-------- CarrouseL DE PhotO DE ProjetS --------//
+
+.slideshow{
 z-index: -10;
 overflow: hidden;
 width: 90%;
-margin: 4rem auto;
+margin: 2rem auto;
 position: relative;
 }
 .slideshow ul{
@@ -312,7 +313,7 @@ position: relative;
             width: 100%;
         }
     }
-        /*****barre progression *****/
+        //-----BarrE ProgressioN -----//
 .barre_progression{ 
 	
     position: absolute;
@@ -324,7 +325,7 @@ position: relative;
         
     }
         
-    /*****animation barre progression *****/    
+    //----- AnimatioN BarrE ProgressioN -----//   
     @keyframes barre_progression{
         
     0%,20%,40%,60%,80%,100%{width: 0%;opacity: 0}
@@ -349,7 +350,7 @@ position: relative;
         color: white;
         width: 80%;
         line-height: 145%;
-        margin: 2rem auto;
+        margin: auto;
 
         span {
             color: #F11D58;
@@ -360,9 +361,10 @@ position: relative;
             align-items: center;
             justify-content: center;
             border: 2px solid white;
-            margin-top:20px;
+            margin-top:15px;
+            margin-bottom:20px;
             height: 40px;
-            width: 50%;
+            width: 180px;
                 
             p {
                 font-family: poppins-semibold;
@@ -371,5 +373,73 @@ position: relative;
             
             }}
         }
+    }
+
+//-------- MaiS QuI JE SuiS --------/
+
+
+    .me {
+        background-color: white;
+        margin-top: 10px;
+        height: 240px;
+
+        .megroup {
+            display: flex;
+            margin-left: 10px;
+            margin-right: 10px;
+
+        .text {
+            
+        h1 {
+            font-family: poppins-semibold;
+            color: black;
+            font-size: 18px;
+            margin-top: 15px;
+            span {
+                color: #F11D58;
+            }
+        }
+        p {
+            font-family: poppins-light;
+            font-size: 14px;
+            width: 95%;
+            margin-top: 25px;
+            line-height: 145%;
+            }
+            .button {
+
+            border: 2px solid #F11D58;
+            width: 150px;
+            height: 25px;
+            margin-left: 0;
+
+            p {
+            display: flex;
+            justify-content: center;
+            font-family: poppins-semibold;
+            color: #F11D58;
+            font-size: 14px;
+            margin: 0;
+            }
+        }
+        }
+        
+        .photo {
+            display: flex;
+            img {
+              height: 150px;
+              margin-top: 30px;
+            }
+            
+        }
+    }
+    .photo {
+        display: flex;
+        img {
+          height: 150px;
+          margin-top: 30px;
+        }
+        
+    }
     }
 }
